--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 eframe = "0.27.2"
+rand = "0.8.5"
 rodio = "0.17.3"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
